Update best-practices.md